--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.application.name=kalah
 spring.data.rest.base-path=/
 # it is for problem
 spring.web.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 server.servlet.encoding.force=true
+
+
