--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,9 @@ spring.data.rest.base-path=/
 spring.web.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 server.servlet.encoding.force=true
+# for swagger
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+springdoc.api-docs.path = /game-api
 
 
